# CloudHopper

./: LICENSE  README.md  pyproject.toml  requirements.txt
agent_runtime/compute/: agent.py
agent_runtime/database/: agent.py
agent_runtime/discovery/: agent.py  state.py
agent_runtime/dispatcher/: dispatcher.py
agent_runtime/network/: agent.py
agent_runtime/security/: agent.py
agent_runtime/storage/: agent.py
agent_runtime/supervisor/: agent.py  intent_agent.py  planner.py  prompts.py  state.py
cli/: app.py
cli/commands/: discovery.py  workflow.py
cli/interactive/: prompt_shell.py
cli/services/: lci_client.py
cli/ui/: animation.py  live_console.py
control-plane/: go.mod  go.sum
control-plane/deployments/: docker-compose.yml
control_plane/: main.py
control_plane/activities/: discovery_activity.py
control_plane/api/: discovery_api.py  workflow_api.py
control_plane/deployments/: docker-compose.yml  init.sql
control_plane/plugins/: models.py  plugin_manager.py  registry.py
control_plane/security/: models.py  token_broker.py
control_plane/services/: temporal_client.py  workflow_service.py
control_plane/workers/: discovery_worker.py
control_plane/workflows/: discovery_workflow.py
docs/: data_sync_subsystem.md
proto/: workflow.proto
providers/aws/: discovery_plugin.py
sync_subsystem/: __init__.py  __main__.py  integration.py
tests/:  test_resource_models.py  test_discovery_agent.py  test_discovery_model.py  test_discovery_workflow.py  test_plugin_manager.py  test_supervisor.py  test_token_broker.py  test_workflow_service.py
(+69 files in other folders)
